--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <title></title>
+    <title>Event Finder</title>
  
 </head>
 <body>
@@ -15,15 +15,29 @@
         <div>
 
         </div>
+        <!-- Search Bar -->
     </header>
-
-    <main>
+        <h3>Search your genre here</h3>
         <div>
-
+            <label for="genre"></label>
+            <input type="text">
+            <button>Search</button>
         </div>
-        
-    </main>
-    
+
+        <!--  event info pop up by ticketmaster & soundcloud api with card idea. hidden until search-->
+    <section>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </section>
+
+
+    <Footer>
+
+    </Footer>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
     <script src="./assets/scripts/script.js"></script>
 </body>
